Fixed a bug where the bottom overflow gradient on the Scorecard page only faded out on some devices

--- a/app/scorecard/scorecard.css
+++ b/app/scorecard/scorecard.css
@@ -43,7 +43,10 @@
 }
 
 .gradient-top {
-	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.0));
+	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.0)); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.0)); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.0)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.0)	); /* Standard syntax */
 	width: 100%;
 	height: calc(100vw / 6);
 	position: absolute;
@@ -54,7 +57,10 @@
 }
 
 .gradient-bottom {
-	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25));
+	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)	); /* Standard syntax */
 	width: 100%;
 	height: calc(100vw / 6);
 	position: absolute;
